--- a/tests/index.html
+++ b/tests/index.html
@@ -13,5 +13,6 @@
 <p>{{ "Your name is @name" | trans({"@name" : "víctor"}) }}</p> 
 <p>{{ "There is no translation in spanish" | trans }}</p>
 <p>{{ "There is no translation at all" | trans }}</p>
+<p>{{ "text" | trans }}</p>
 </body>
 </html>
